Fixed some bootstrap wrapping and added City output

--- a/http_docs/style.css
+++ b/http_docs/style.css
@@ -22,5 +22,6 @@ body, p, h1, h2, h3, h4, h5 {
 
 #dropDownSection {
 	width : 100%;
+	height : 20px;
 	float: left;
 }
